--- a/header.tex
+++ b/header.tex
@@ -34,6 +34,7 @@
 \newcommand\expect[1]{\mathbb{E}\left[{#1}\right]}
 \newcommand\var[1]{\mathrm{Var}\left[{#1}\right]}
 \newcommand\myvar{\mathrm{Var}}
+\newcommand\Var{\myvar}
 \newcommand\dist[2]{\mathrm{#1}\left(#2\right)}
 \newcommand\lik{\mathcal{L}}
 \newcommand\loglik{\ell}
