--- a/01/main.tex
+++ b/01/main.tex
@@ -1059,7 +1059,9 @@ $$
     and therefore the events $A$, $B$, and $C$ are not mutually independent.
   \end{exampleblock}
 
-  \framebreak
+\end{frame}
+
+\begin{frame}[allowframebreaks]{Example: AIDS transmission}
 
   \begin{exampleblock}{Exercise: AIDS transmission}
     AIDS is transmitted via sexual contacts. Following several studies on AIDS, an article in the \emph{Los Angeles Times} (August 24, 1987) suggests that the average risk of contracting AIDS per sexual contact with someone infected with AIDS is about $1/500$.
@@ -1082,7 +1084,6 @@ $$
 
   \framebreak
 
-  \begin{block}{CAUTION}
     \begin{itemize}
       \item It is a very common mistake to confuse ``Mutually Independent" with ``Mutually Disjoint" (or ``Mutually Exclusive"), which is a topic we covered previously.
 
@@ -1092,7 +1093,6 @@ $$
     $$
   \item This is incorrect, as the events $A_i$ are NOT mutually exclusive. See Textbook Example B in Chapter 1.3 for more details.
   \end{itemize}
-  \end{block}
 
   To summarize the above caution:
   \begin{itemize}
