--- a/hw01/hw01.tex
+++ b/hw01/hw01.tex
@@ -93,14 +93,14 @@
 \fancyhf{}
 \renewcommand{\sectionmark}[1]{\markright{\thesection.\ #1}}
 \lhead{\fancyplain{}{}} 
-\fancyhead[RE,RO]{STAT 510}
+\fancyhead[RE,RO]{Math 4450, Fall 2025}
 \fancyfoot[RE,RO]{\thepage}
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
 \begin{flushright}
 \begin{minipage}{.33\textwidth}
-\rightline{Jesse Wheeler}
-\rightline{\href{mailto:jeswheel@umich.edu}{jeswheel@umich.edu}}
+\rightline{YOUR NAME}
+\rightline{\href{mailto:YOUR EMAIL}{YOUR EMAIL}}
 \rightline{\today}
 \end{minipage}
 \end{flushright}
